Fixed smaller layout issues

--- a/src/components/CTABanner/CTABanner.module.css
+++ b/src/components/CTABanner/CTABanner.module.css
@@ -16,3 +16,7 @@
     line-height: 1.2;
   }
 }
+
+.pitstopGif {
+  width: 100%;
+}
